[package]
name = "video-chat"
version = "0.1.0"
authors = ["Eugene Zemtsov <eugene@chromium.org>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-broker = "0.3.1"
actix-files = "0.4"
actix-rt = "1"
actix-web = "3.3.2"
actix-service = "1"
actix-web-actors = "3"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rand = "0.7"
lazy_static = "*"
actix-http = "*"
serde_json = "1.0.64"
serde = "1.0.125"
