[package]
name = "video-chat"
version = "0.1.0"
authors = ["Eugene Zemtsov <eugene@chromium.org>"]
edition = "2021"

[dependencies]
actix = "0.13"
actix-broker = "0.4"
actix-codec = "0.5"
actix-cors = "0.7"
actix-files = "0.6"
actix-http = "3.5"
actix-identity = "0.7"
actix-multipart = "0.7"
actix-session = "0.10"
actix-test = "0.1"
actix-tls = "3.4"
actix-utils = "3"
actix-web = "4.9"
actix-web-actors = "4.1"
actix-web-lab = "0.22"
actix-ws = "0.3"

env_logger = "0.8"
futures = "0.3"
log = "0.4"
#rand = "0.7"
lazy_static = "*"
#actix-http = "*"
serde_json = "*"
serde = "*"
#actix-web = { version = "4", features = ["rustls-0_23"] }
rustls = { version ="0.23", default-features = false, features = ["custom-provider"] }
#rustls-pemfile = "2"
